--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1290,6 +1290,13 @@ ul li ul.dropdown li {
     padding: 7px 5px;
     margin-top: 9px;
   }
+  ul > li > ul > li > a {
+    color: rgb(41, 34, 34);
+    font-size: 10px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
   .home > .main-content > .product_list {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
@@ -1375,9 +1382,9 @@ ul li ul.dropdown li {
   }
   .footer > .container > .footer-body {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
     width: 100%;
   }
   .footer > .container > #footer {
@@ -1400,22 +1407,20 @@ ul li ul.dropdown li {
     align-items: flex-start;
     justify-content: center;
     padding-left: 0px;
-    padding-bottom: 20px;
-    width: 100%;
   }
   .footer > .container > .footer-body > .Follow {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 20px;
   }
   .footer > .container > .footer-bottom {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 10px;
   }
   .footer > .container > .footer-bottom > .Account {
@@ -1435,6 +1440,7 @@ ul li ul.dropdown li {
     justify-content: center;
     align-items: flex-start;
     padding: 0px;
+    margin: 0;
   }
   .footer > .container > .footer-bottom > .feature > #sec {
     padding: 0px;
@@ -1442,9 +1448,8 @@ ul li ul.dropdown li {
   }
   .footer > .container > #footer {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    flex-flow: row wrap;
+    justify-content: space-between;
   }
   .footer > .container > #footer > .subscribe {
     display: flex;
@@ -1462,7 +1467,7 @@ ul li ul.dropdown li {
     margin-bottom: 20px;
   }
   .footer > .container > .footer-bottom > .social {
-    margin-top: 20px;
+    margin-top: 60px;
   }
   .home > .main-content > .product_list > .card > .overlay {
     position: absolute;
