--- a/CSS/product.css
+++ b/CSS/product.css
@@ -143,7 +143,7 @@ ul li ul.dropdown li {
 }
 .main > .Product > .product-details > .product-spec > .product-title > div > a {
   color: rgb(100, 100, 100);
-  margin: 0px 5px;
+  /* margin: 0px 5px; */
   font-weight: 100;
 }
 .main
@@ -901,6 +901,13 @@ td {
     padding: 7px 5px;
     margin-top: 9px;
   }
+  ul > li > ul > li > a {
+    color: rgb(41, 34, 34);
+    font-size: 10px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
   .main > .Product > .product-details > .product-spec > .rating {
     display: block;
     font-size: small;
@@ -950,11 +957,21 @@ td {
   .main > .Product > #Custom-tab > table {
     width: 100%;
   }
+  .main
+    > .Product
+    > .product-details
+    > .product-spec
+    > .product-title
+    > div
+    > a
+    > span {
+    display: none;
+  }
   .footer > .container > .footer-body {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
     width: 100%;
   }
   .footer > .container > #footer {
@@ -977,22 +994,19 @@ td {
     align-items: flex-start;
     justify-content: center;
     padding-left: 0px;
-    padding-bottom: 20px;
-    width: 100%;
   }
   .footer > .container > .footer-body > .Follow {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
-    text-align: center;
-    margin-top: 10px;
+    align-items: center;
+    margin-top: 20px;
   }
   .footer > .container > .footer-bottom {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 10px;
   }
   .footer > .container > .footer-bottom > .Account {
@@ -1011,17 +1025,17 @@ td {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    text-align: left;
+    padding: 0px;
+    margin: 0;
   }
   .footer > .container > .footer-bottom > .feature > #sec {
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
   }
   .footer > .container > #footer {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    flex-flow: row wrap;
+    justify-content: space-between;
   }
   .footer > .container > #footer > .subscribe {
     display: flex;
@@ -1039,7 +1053,7 @@ td {
     margin-bottom: 20px;
   }
   .footer > .container > .footer-bottom > .social {
-    margin-top: 20px;
+    margin-top: 60px;
   }
 }
 /* Mobile Landscape */
