--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -11,16 +11,16 @@
   width: 100%;
   height: auto;
 }
-.navbar {
+.Navigation {
   background-color: rgb(85, 78, 78);
 }
-.navbar > .container > .nav-header > a {
+.Navigation > .container > #nav > a {
   margin: 2px 0;
 }
-.navbar > .container > .collapse > .nav {
+.Navigation > .container > #myNavbar > ul {
   width: 85%;
 }
-.navbar > .container > .collapse > .nav > li > a {
+.Navigation > .container > #myNavbar > ul > li > a {
   color: white;
   font-size: 15px;
   letter-spacing: 1px;
@@ -30,7 +30,7 @@
   padding: 7px 10px;
   margin-top: 10px;
 }
-.navbar > .container > .collapse > .nav > li > a:hover {
+.Navigation > .container > #myNavbar > ul > li > a:hover {
   background-color: rgb(41, 34, 34);
 }
 .container > #myCarousel {
@@ -68,7 +68,7 @@ ul li:hover ul.dropdown {
 ul li ul.dropdown li {
   display: block;
 }
-.navbar > .container > .collapse > .notification {
+.Navigation > .container > #myNavbar > .notification {
   color: white;
   text-decoration: none;
   padding: 10px 10px;
@@ -77,18 +77,18 @@ ul li ul.dropdown li {
   display: inline-block;
   background-color: transparent;
 }
-.navbar > .container > .collapse > .notification > i {
+.Navigation > .container > #myNavbar > .notification > i {
   font-size: x-large;
   position: absolute;
   top: 10px;
   right: 10px;
 }
-.navbar > .container > .collapse > .notification:hover,
+.Navigation > .container > #myNavbar > .notification:hover,
 :focus,
 :active {
   color: white;
 }
-.navbar > .container > .collapse > .notification .badge {
+.Navigation > .container > #myNavbar > .notification .badge {
   position: absolute;
   top: 5px;
   right: 5px;
@@ -227,6 +227,7 @@ ul li ul.dropdown li {
   float: right;
   font-size: x-small;
   color: rgb(49, 49, 49);
+  padding-top: 7px;
 }
 .home > .main-content > .shop-categories > ul > li > a:hover,
 :active,
@@ -268,6 +269,7 @@ ul li ul.dropdown li {
   float: right;
   font-size: x-small;
   color: rgb(49, 49, 49);
+  padding-top: 7px;
 }
 .home
   > .main-content
@@ -1281,7 +1283,7 @@ ul li ul.dropdown li {
 }
 /* Tablet Landscape */
 @media screen and (max-width: 1199px) {
-  .navbar > .container > .collapse > .nav > li > a {
+  .Navigation > .container > #myNavbar > ul > li > a {
     color: white;
     font-size: 10px;
     letter-spacing: 1px;
@@ -1331,11 +1333,18 @@ ul li ul.dropdown li {
     font-family: Oswald;
     height: 25px;
   }
+  .footer > .container > .footer-body > .featured-product > h5 {
+    margin-top: 10px;
+  }
+  .footer > .container > .footer-body > .Follow {
+    margin-top: -100px;
+  }
   .footer > .container > #footer {
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     justify-content: space-around;
     align-items: center;
+    text-align: center;
   }
 }
 /* Tablet Portrait */
@@ -1388,6 +1397,9 @@ ul li ul.dropdown li {
     flex-wrap: wrap;
     width: 100%;
   }
+  .footer > .container > .footer-body > .body > h5 {
+    padding: 0px;
+  }
 
   .footer > .container > .footer-body > .body > .contact > div {
     display: flex;
@@ -1402,6 +1414,7 @@ ul li ul.dropdown li {
     align-items: flex-start;
     justify-content: center;
     padding-left: 0px;
+    margin-top: 50px;
   }
   .footer > .container > .footer-body > .Follow {
     display: flex;
@@ -1485,7 +1498,27 @@ ul li ul.dropdown li {
 }
 /* Mobile Landscape */
 @media screen and (max-width: 767px) {
-  .navbar > .container > .collapse > .notification {
+  .Navigation > .container > #myNavbar > ul > li > a {
+    color: white;
+    font-size: 15px;
+    letter-spacing: 1px;
+    font-family: Secular One;
+    text-transform: uppercase;
+    margin: 6px 5px;
+    padding: 7px 10px;
+    margin-top: 10px;
+  }
+  .Navigation > .container > #myNavbar > ul {
+    width: 109%;
+  }
+  ul > li > ul > li > a {
+    color: rgb(41, 34, 34);
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+  .Navigation > .container > #myNavbar > .notification {
     display: none;
   }
   .home > .main-content {
@@ -1538,6 +1571,7 @@ ul li ul.dropdown li {
     justify-content: center;
     padding-left: 0px;
     padding-bottom: 20px;
+    margin-top: 10px;
     width: 100%;
   }
   .footer > .container > .footer-body > .Follow {
@@ -1609,6 +1643,10 @@ ul li ul.dropdown li {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+  }
+  .Navigation > .container > #myNavbar > ul {
+    width: 109%;
+    text-align: center;
   }
   .home > .container > .OurService > .shipping {
     padding: 10px 10px;
@@ -1731,7 +1769,8 @@ ul li ul.dropdown li {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
+    text-align: center;
   }
   .footer > .container > #footer > .subscribe {
     display: flex;
