--- a/CSS/productList2.css
+++ b/CSS/productList2.css
@@ -691,7 +691,7 @@ ul li ul.dropdown li {
 
 /* Tablet Landscape */
 @media screen and (max-width: 1199px) {
-  .navbar > .container > .collapse > .nav > li > a {
+  .Navigation > .container > #myNavbar > ul > li > a {
     color: white;
     font-size: 10px;
     letter-spacing: 1px;
@@ -711,9 +711,15 @@ ul li ul.dropdown li {
   .main-content > div > .heading > .size {
     align-self: center;
   }
+  .footer > .container > .footer-body > .featured-product > h5 {
+    margin-top: 10px;
+  }
+  .footer > .container > .footer-body > .Follow {
+    margin-top: -100px;
+  }
   .footer > .container > #footer {
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     justify-content: space-around;
     align-items: center;
   }
@@ -749,6 +755,7 @@ ul li ul.dropdown li {
     align-items: flex-start;
     justify-content: center;
     padding-left: 0px;
+    margin-top: 50px;
   }
   .footer > .container > .footer-body > .Follow {
     display: flex;
@@ -814,6 +821,27 @@ ul li ul.dropdown li {
 }
 /* Mobile Landscape */
 @media screen and (max-width: 767px) {
+  .Navigation > .container > #myNavbar > ul {
+    width: 109%;
+  }
+  .Navigation > .container > #myNavbar > ul > li > a {
+    color: white;
+    font-size: 15px;
+    letter-spacing: 1px;
+    font-family: Secular One;
+    text-transform: uppercase;
+    margin: 6px 5px;
+    padding: 7px 10px;
+    margin-top: 10px;
+  }
+  ul > li > ul > li > a {
+    color: rgb(41, 34, 34);
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+
   .navbar > .container > .collapse > .notification {
     display: none;
   }
@@ -917,6 +945,9 @@ ul li ul.dropdown li {
 }
 /* Mobile Portrait */
 @media screen and (max-width: 480px) {
+  .Navigation > .container > #myNavbar > ul {
+    text-align: center;
+  }
   .main-content {
     display: flex;
     flex-direction: column;
@@ -928,10 +959,11 @@ ul li ul.dropdown li {
     flex-direction: column;
     width: 100%;
   }
-
+  .main-content > div > .heading {
+    padding: 0px 10px;
+  }
   .main-content > div > .product-list > #item-1 {
-    padding-left: 0px;
-    padding-right: 0px;
+    margin-right: 5px;
   }
   .main-content > div > .product-list > #item-1 > img {
     width: 100%;
@@ -952,8 +984,9 @@ ul li ul.dropdown li {
     > #item-1
     > .product-details
     > .group-btn
-    > .like {
-    align-self: center;
+    > #like {
+    margin-top: 10px;
+    text-align: center;
   }
 
   .footer > .container > .footer-body {
@@ -963,13 +996,7 @@ ul li ul.dropdown li {
     align-items: flex-start;
     width: 100%;
   }
-  .footer > .container > #footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: left;
-    width: 100%;
-  }
+
   .footer > .container > .footer-body > .body > .contact > div {
     display: flex;
     flex-direction: column;
@@ -1025,7 +1052,7 @@ ul li ul.dropdown li {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
   }
   .footer > .container > #footer > .subscribe {
     display: flex;
