--- a/CSS/productList2.css
+++ b/CSS/productList2.css
@@ -223,14 +223,14 @@ ul li ul.dropdown li {
   justify-content: space-between;
   align-items: flex-start;
   text-align: left;
-  width: 100%;
 }
 .main-content > div > .product-list > #item-1 {
   display: flex;
   flex-direction: row;
   justify-items: center;
   align-items: center;
-  padding: 10px 10px;
+  padding: 10px 5px;
+  margin: 0px;
 }
 .main-content > div > .product-list > #item-1 > img {
   width: 100%;
@@ -306,6 +306,7 @@ ul li ul.dropdown li {
   > #btn
   > i {
   font-size: 14px;
+  margin-bottom: 5px;
 }
 .main-content
   > div
@@ -315,9 +316,9 @@ ul li ul.dropdown li {
   > .group-btn
   > #like {
   font-size: 15px;
-  padding: 5px 8px;
+  padding: 7px 8px;
   border-radius: 0px;
-  margin: 0px 3px;
+  margin: 5px 3px;
   border: 1px solid rgb(73, 73, 73);
   background: transparent;
 }
@@ -850,7 +851,7 @@ ul li ul.dropdown li {
     grid-gap: 1rem;
     text-align: center;
     padding: 10px 0px;
-    margin: 0px 0;
+    margin: 0px 0px;
   }
 
   .footer > .container > .footer-body {
@@ -963,12 +964,12 @@ ul li ul.dropdown li {
     padding: 0px 10px;
   }
   .main-content > div > .product-list > #item-1 {
-    margin-right: 5px;
+    padding: 10px 10px;
   }
   .main-content > div > .product-list > #item-1 > img {
     width: 100%;
     height: auto;
-    padding: 0px 10px;
+    padding-right: 10px;
   }
   .main-content > div > .product-list > #item-1 > .product-details {
     display: flex;
@@ -977,6 +978,15 @@ ul li ul.dropdown li {
     align-items: left;
     text-align: left;
     padding: 0;
+  }
+  .main-content
+    > div
+    > .product-list
+    > #item-1
+    > .product-details
+    > .group-btn
+    > #btn {
+    width: 100%;
   }
   .main-content
     > div
