--- a/CSS/product.css
+++ b/CSS/product.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Quicksand");
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 @import url("https://fonts.googleapis.com/css?family=Open Sans");
+@import url("https://fonts.googleapis.com/css?family=Secular One");
 
 * {
   margin: 0;
