--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 @import url("https://fonts.googleapis.com/css?family=Quicksand");
 @import url("https://fonts.googleapis.com/css?family=Poppins");
+@import url("https://fonts.googleapis.com/css?family=Secular One");
+
 * {
   margin: 0;
   padding: 0;
